--- a/HappyTrip/jenkinsfile
+++ b/HappyTrip/jenkinsfile
@@ -49,13 +49,12 @@ pipeline {
                         
                 }
             
-                success {
-                    emailext attachmentsPattern: 'reports/.html', 
-                    body: '''${SCRIPT, template="groovy-html.template"}''',
-                    subject: "${env.JOB_NAME} - Build # ${env.BUILD_NUMBER} - successful",
-                    mimeType: 'text/html', 
-                    to:"padmajothi020296@gmail.com"
-                        
-                }
+                  success { 
+                emailext attachmentsPattern: '**/results.html',
+                body: '${SCRIPT, template="groovy-html.template"}',
+                mimeType: 'text/html',
+                subject: 'Success Pipeline: ${currentBuild.fullDisplayName}',
+                to: 'padmajothi020296@gmail.com'
+            
         }   
 }
